Mon Jul  6 05:16:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/cuts:
        * examples/cuts/utils:
        * examples/cuts/utils/node:
        * examples/cuts/utils/node/DAnCE:
        * examples/cuts/utils/node/DAnCE/dance.cutsnode.config:
        * examples/cuts/utils/node/DAnCE/environment.txt:

          . Example for using the CUTS node daemon to deploy DAnCE
            artifacts, such as the node and execution manager.

Mon Jul  6 05:08:01 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * tests/cuts/utils/node:

          . Renamed the Node_Daemon directory.

        * tests/cuts/utils/Node_Daemon:
        * tests/cuts/utils/Node_Daemon/Node_Daemon_Test.mpc:
        * tests/cuts/utils/Node_Daemon/TestApp1.cpp:
        * tests/cuts/utils/Node_Daemon/TestApp2.cpp:
        * tests/cuts/utils/Node_Daemon/example.config:

          Removed these files.

Mon Jul  6 05:03:48 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/Property_Parser.h:

          . Added support for replacing properties that appear in
            the value of another property.

        * cuts/utils/node/Node_Daemon.cpp:
        * cuts/utils/node/Text_Variable_Importer.h:
        * cuts/utils/node/Text_Variable_Importer.inl:
        * cuts/utils/node/Text_Variable_Importer.cpp:
        * cuts/utils/node/Variable_Importer_Strategy.h:
        * cuts/utils/node/Variable_Importer_Strategy.inl:
        * cuts/utils/node/Variable_Importer_Strategy.cpp:
        * cuts/utils/node/cutsnode.h:
        * cuts/utils/node/cutsnode.inl:
        * cuts/utils/node/cutsnode.cpp:
        * cuts/utils/node/cutsnode_d.mpc:
        * etc/schemas/cutsnode.xsd:

          . Added support for importing variables from external files
            that have text format.

Sun Jul  5 22:44:49 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/node/Delay_Handler.h:
        * cuts/utils/node/Delay_Handler.cpp: