@@ -1,3 +1,14 @@
+Mon Jul  6 06:41:33 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
+
+        * cuts/utils/node/Node_Daemon.cpp:
+        * cuts/utils/node/Node_Daemon_Options.h:
+        * cuts/utils/node/cutsnode.h:
+        * cuts/utils/node/cutsnode.inl:
+        * cuts/utils/node/cutsnode.cpp:
+
+          . Added support for setting the active environment from the
+            command-line using the --active-env=NAME argument.
+
 Mon Jul  6 05:16:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>
 
         * examples/cuts:
